rename engines/items_types module and classes to improve code redability; removed the data_importer class, now the EnginCore do all the job; added docker vars; added factory as parameter on MyrecoAPI.
