# myreco/engines/cores/swagger_schema.json
@@ -1,5 +1,5 @@
 {
-    "/items_types/": {
+    "/engines_cores/": {
         "parameters": [{
             "name": "Authorization",
             "in": "header",
@@ -17,25 +17,11 @@
             "responses": {"201": {"description": "Created"}}
         },
         "get": {
-            "parameters": [{
-                "name": "stores",
-                "in": "query",
-                "required": true,
-                "type": "array",
-                "items": {
-                    "type": "object",
-                    "additionalProperties": false,
-                    "required": ["id"],
-                    "properties": {
-                        "id": {"type": "integer"}
-                    }
-                }
-            }],
             "operationId": "swagger_get_all",
             "responses": {"200": {"description": "Got"}}
         }
     },
-    "/items_types/{id}/": {
+    "/engines_cores/{id}/": {
         "parameters": [{
             "name": "Authorization",
             "in": "header",
@@ -73,8 +59,7 @@
             "additionalProperties": false,
             "properties": {
                 "name": {"type": "string"},
-                "schema": {"$ref": "#/definitions/items"},
-                "stores": {"$ref": "#/definitions/stores"}
+                "configuration": {"$ref": "#/definitions/configuration"}
             }
         },
         "schema_array": {
@@ -83,35 +68,26 @@
             "items": {
                 "type": "object",
                 "additionalProperties": false,
-                "required": ["name", "schema", "stores"],
+                "required": ["configuration"],
                 "properties": {
                     "name": {"type": "string"},
-                    "schema": {"$ref": "#/definitions/items"},
-                    "stores": {"$ref": "#/definitions/stores"}
+                    "configuration": {"$ref": "#/definitions/configuration"}
                 }
             }
         },
-        "stores": {
-            "type": "array",
-            "minItems": 1,
-            "items": {
-                "type": "object",
-                "additionalProperties": false,
-                "required": ["id"],
-                "properties": {"id": {"type": "integer"}}
+        "configuration": {
+            "type": "object",
+            "required": ["core_module"],
+            "properties": {
+                "core_module": {"$ref": "#/definitions/module"}
             }
         },
-        "items": {
+        "module": {
             "type": "object",
-            "required": ["type", "id_names", "properties"],
+            "required": ["path", "class_name"],
             "properties": {
-                "type": {"enum": ["object"]},
-                "id_names": {
-                    "type": "array",
-                    "minItems": 1,
-                    "items": {"type": "string", "minLength": 1}
-                },
-                "properties": {"$ref": "items_schema.json#/definitions/baseObject/properties/properties"}
+                "path": {"type": "string"},
+                "class_name": {"type": "string"}
             }
         }
     }
